# uma

./: .gitignore
csvfiles/2005/: 2005100805_Sheet1.csv  2005100808_Sheet1.csv  2005100905_Sheet1.csv  2005100908_Sheet1.csv  2005101505_Sheet1.csv  2005101508_Sheet1.csv  2005101605_Sheet1.csv  2005101608_Sheet1.csv  2005102203_Sheet1.csv  2005102205_Sheet1.csv  2005102208_Sheet1.csv  2005102303_Sheet1.csv  2005102305_Sheet1.csv  2005102308_Sheet1.csv  2005102903_Sheet1.csv  2005102905_Sheet1.csv  2005102908_Sheet1.csv  2005103003_Sheet1.csv  2005103005_Sheet1.csv  2005103008_Sheet1.csv  2005110503_Sheet1.csv  2005110505_Sheet1.csv  2005110508_Sheet1.csv  2005110603_Sheet1.csv  2005110605_Sheet1.csv  2005110608_Sheet1.csv  2005111203_Sheet1.csv  2005111205_Sheet1.csv  2005111208_Sheet1.csv  2005111303_Sheet1.csv  2005111305_Sheet1.csv  2005111308_Sheet1.csv  2005111905_Sheet1.csv  2005111908_Sheet1.csv  2005112005_Sheet1.csv  2005112008_Sheet1.csv  2005112605_Sheet1.csv  2005112608_Sheet1.csv  2005112705_Sheet1.csv  (+25 more)
src/: CMakeLists.txt  DataStructure.hpp  FileReader.hpp  StringManipulator.hpp  UmaDataAnalyzer.cpp  UmaDataAnalyzer.hpp  main.cpp  print_density_function.cpp  uma.cpp  uma_interface.cpp  uma_year.cpp
src/analyzer/: DataStructure.cpp  DataStructure.hpp  FileReader.cpp  StringManipulator.hpp  UmaDataAnalyzer.cpp  statistics.hpp
src/buyer/: CMakeLists.txt  buyer.cpp  buyer.hpp
src/linear/: a.out  linear.hpp  test.cpp
src/simulator/: simulator.cpp.old  simulator.hpp  simulator.hpp.old
src/timer/: makefile  timer.cpp  timer.h  timer_test.cpp
(+2883 files in other folders)
